# ros_qtc_plugin

./: CMakeLists.txt  README.md  install-sdk.py  setup.py  versions.yaml
.github/workflows/: c-cpp.yml  main.yml
packaging/: cpack-config.cmake  cpack.cmake  format-deb-url.py  launcher.cmake
src/project_manager/: ROSProjectManager.json.in
